--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     
     <!-- Enlace a biblioteca JavaScript de Leaflet -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>    
+    
+    <!-- Enlace a leaflet-providers -->  
+    <script src="js/leaflet-providers.js"></script>    
 
     <link rel="stylesheet" href="css/estilos.css">
 </head>
