--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <div id="mapid"></div>
 
     <!-- Código JavaScript para generar y manejar el mapa Leaflet -->
-    <script src="js/scripts.js"></script>					
+    <script src="js/mapas.js"></script>					
 </body>
 </html>
