--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Ejemplo de mapa Leaflet con capas vectoriales</title>     
+    <title>Ejemplo de mapa Leaflet con complementos</title>     
 
     <!-- Enlace a biblioteca JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Ejemplo de mapa Leaflet con capas vectoriales</h1>     
+    <h1>Ejemplo de mapa Leaflet con complementos</h1>     
     
     <!-- Elemento div para contener el mapa Leaflet -->
     <div id="mapid"></div>
