--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Ejemplo de mapa Leaflet con complementos</h1>     
+    <h1>Ejemplo de mapa Leaflet con complementos 2</h1>     
     
     <!-- Elemento div para contener el mapa Leaflet -->
     <div id="mapid"></div>
